  the GIL is released, or owned by another thread.

- Issue #4122: On Windows, fix a compilation error when using the
  Py_UNICODE_ISSPACE macro in an extension module.

- Issue #4293: Py_AddPendingCall is now thread safe and can be used for
  asynchronous notifications to python from any thread.  Documentation added.

Extension Modules
-----------------

- Issue #6877: Make it possible to link the readline extension to libedit
  on OSX.

- Issue #6944: Fix a SystemError when socket.getnameinfo() was called
  with something other than a tuple as first argument.

- Issue #6865: Fix reference counting issue in the initialization of the pwd
  module.

- Issue #6848: Fix curses module build failure on OS X 10.6.

- Fix a segfault in expat when given a specially crafted input lead to the
  tokenizer not stopping.

- Issue #6561: '\d' in a regex now matches only characters with
  Unicode category 'Nd' (Number, Decimal Digit).  Previously it also
  matched characters with category 'No'.

- Issue #1523: Remove deprecated overflow wrapping for struct.pack
  with an integer format code ('bBhHiIlLqQ').  Packing an out-of-range
  integer now consistently raises struct.error.

- Issues #1530559, #1741130: Fix various struct.pack inconsistencies
  for the integer formats ('bBhHiIlLqQ').  In the following, '*'
  represents any of '=', '<', '>'.

    - Packing a float now always gives a Deprecation Warning.
      Previously it only warned for 'I', 'L', '*B', '*H', '*I', '*L'.

    - If x is not an int, long or float, then packing x will always
      result in struct.error.  Previously an x with an __int__ method
      could be packed by 'b', 'B', 'h', 'H', 'i', 'l', '*b', '*h'
      ,'*i', '*l', and an x with a __long__ method could be packed by
      'q', 'Q', '*q', '*Q'; for x with neither __int__ nor __long__,
      TypeError used to be raised (with a confusing error message) for
      'I', 'L', '*B', '*H', '*I', '*L', and struct.error in other cases.
