@@ -669,6 +669,7 @@ Jerry Seutter
 Denis Severson
 Ian Seyer
 Ha Shao
+Richard Shapiro
 Bruce Sherwood
 Pete Shinners
 Michael Shiplett
